force-app/main/default/objects/QuoteBiddingInquiry__c/QuoteBiddingInquiry__c.object-meta.xml
<CustomObject>
    <label>見積・応札・手数料伺い</label>
    <nameField>
        <label>伺い件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>