force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdditionalPostInquiryApplication__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPostInquiryApplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>兼務側の伺い申請</label>
    <type>Checkbox</type>
</CustomField>