force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustCPMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustCPMax__c</fullName>
    <label>今回増減_CP(MAX)</label>
    <summarizedField>DetailByInquiryFactory__c.AdjustCPMax__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>