force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustMaxFee__c.field-meta.xml
<CustomField>
    <fullName>AdjustMaxFee__c</fullName>
    <label>今回増減手数料(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>