force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustMinFee__c.field-meta.xml
<CustomField>
    <fullName>AdjustMinFee__c</fullName>
    <label>今回増減手数料(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>