force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTC__c.field-meta.xml
<CustomField>
    <fullName>AdjustTC__c</fullName>
    <label>今回増減_TC</label>
    <summarizedField>DetailByInquiryFactory__c.AdjustTC__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>