force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTotalCPMaxSummary__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalCPMaxSummary__c</fullName>
    <label>今回合計CP(MAX)</label>
    <summarizedField>DetailByInquiryFactory__c.AdjustCPMax__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>