force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTotalCPMinSummary__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalCPMinSummary__c</fullName>
    <label>今回合計CP(MIN)</label>
    <summarizedField>DetailByInquiryFactory__c.AdjustCPMin__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>