force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTotalTCMinSummary__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalTCMinSummary__c</fullName>
    <label>今回合計TC(MIN)</label>
    <summarizedField>DetailByInquiryFactory__c.AdjustTC__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>