force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTotalTCRateMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalTCRateMax__c</fullName>
    <formula>round(AdjustTotalTCMaxSummary__c/AdjustTotalCPMaxSummary__c,3)</formula>
    <label>今回合計TC率(MAX)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>