force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTotalWCRateMax__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalWCRateMax__c</fullName>
    <formula>round(AdjustTotalWCSummary__c/AdjustTotalCPMaxSummary__c,3)</formula>
    <label>今回合計WC率(MAX)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>