force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustTotalWCRateMin__c.field-meta.xml
<CustomField>
    <fullName>AdjustTotalWCRateMin__c</fullName>
    <formula>ROUND(AdjustTotalWCSummary__c/AdjustTotalCPMinSummary__c,3)</formula>
    <label>今回合計WC率(MIN)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>