force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AdjustWC__c.field-meta.xml
<CustomField>
    <fullName>AdjustWC__c</fullName>
    <label>今回増減_WC</label>
    <summarizedField>DetailByInquiryFactory__c.AdjustWC__c</summarizedField>
    <summaryForeignKey>DetailByInquiryFactory__c.QuoteBiddingInquiry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>