force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1_Factor_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Agency1_Factor_Qualification__c</fullName>
    <formula>CASE(TEXT(Agency1Qualification__c ),
    &quot;代理店&quot;,1.0,
    &quot;特約店&quot;,0.8,
    0.0
)</formula>
    <label>代理店1_係数_資格</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>