force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1_Factor_TradingStyle__c.field-meta.xml
<CustomField>
    <fullName>Agency1_Factor_TradingStyle__c</fullName>
    <formula>CASE(TEXT(Agency1TradingStyle__c),
    &quot;委嘱&quot;,1.2,
    &quot;協力&quot;,1.0,
    0.0
)</formula>
    <label>代理店1_係数_取引形態</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>