force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1_OrderContributionRate__c.field-meta.xml
<CustomField>
    <fullName>Agency1_OrderContributionRate__c</fullName>
    <formula>IF(
    NOT( ISBLANK(TEXT( Agency1TradingStyle__c )) ) ,
    ROUND(
        IF(
            Agency1_EvaluationPointSum__c  / 
            ( Agency1_EvaluationPointSum__c + Agency2_EvaluationPointSum__c + Agency3_EvaluationPointSum__c ) &lt;&gt; 0,
            Agency1_EvaluationPointSum__c  / 
             ( Agency1_EvaluationPointSum__c + Agency2_EvaluationPointSum__c + Agency3_EvaluationPointSum__c ),
            0
        ),
        3
    ),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店1_受注貢献比率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>