force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1MaxCalculationFee__c.field-meta.xml
<CustomField>
    <fullName>Agency1MaxCalculationFee__c</fullName>
    <formula>CEILING( TheoryFeeMax__c * Agency1_Factor_TradingStyle__c * Agency1_Factor_FunctionEvaluation__c * CategoryCoefficient__c * Agency1_Factor_Qualification__c * Factor_PriceExponential_Calculate__c * Agency1_OrderContributionRate__c / 100 ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店1_算出手数料(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>