force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1MaxTheoryFeeRatio__c.field-meta.xml
<CustomField>
    <fullName>Agency1MaxTheoryFeeRatio__c</fullName>
    <formula>Agency1MaxFee__c  /  TheoryFeeMax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店1_理論手数料比率(MAX)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>