force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1Qualification__c.field-meta.xml
<CustomField>
    <fullName>Agency1Qualification__c</fullName>
    <label>代理店1_資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>代理店</fullName>
            </value>
            <value>
                <fullName>特約店</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>