force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1StoreName__c.field-meta.xml
<CustomField>
    <fullName>Agency1StoreName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店1_店名(手数料伺い)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>QuoteInquiryBiddingToContact_del</relationshipName>
    <type>Lookup</type>
</CustomField>