force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency1TradingStyle__c.field-meta.xml
<CustomField>
    <fullName>Agency1TradingStyle__c</fullName>
    <label>代理店1_取引形態(伺い)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>委嘱</fullName>
            </value>
            <value>
                <fullName>協力</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>