force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency2_BaseFunction_EvPoint__c.field-meta.xml
<CustomField>
    <fullName>Agency2_BaseFunction_EvPoint__c</fullName>
    <label>代理店2_基本機能_評価点(50点満点)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>