force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency2_EvaluationPointSum__c.field-meta.xml
<CustomField>
    <fullName>Agency2_EvaluationPointSum__c</fullName>
    <formula>Agency2_BaseFunction_EvPoint__c +  Agency2_PlatformFunction_EvPoint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店2_評価点合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>