force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency2MinFee__c.field-meta.xml
<CustomField>
    <fullName>Agency2MinFee__c</fullName>
    <label>代理店2_決定手数料(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>