force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency2MinTheoryFeeRatio__c.field-meta.xml
<CustomField>
    <fullName>Agency2MinTheoryFeeRatio__c</fullName>
    <formula>Agency2MinFee__c  /  TheoryFeeMin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店2_理論手数料比率(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>