force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency2Name__c.field-meta.xml
<CustomField>
    <fullName>Agency2Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店2_店名(手数料伺い)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R67</relationshipName>
    <type>Lookup</type>
</CustomField>