force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency2TradingStyle__c.field-meta.xml
<CustomField>
    <fullName>Agency2TradingStyle__c</fullName>
    <label>代理店2_取引形態(手数料伺い)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>委嘱</fullName>
            </value>
            <value>
                <fullName>協力</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>