force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency3_EvaluationPointSum__c.field-meta.xml
<CustomField>
    <fullName>Agency3_EvaluationPointSum__c</fullName>
    <formula>Agency3_BaseFunction_EvPoint__c + Agency3_PlatformFunction_EvPoint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店3_評価点合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>