force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency3_Factor_FunctionEvaluation__c.field-meta.xml
<CustomField>
    <fullName>Agency3_Factor_FunctionEvaluation__c</fullName>
    <formula>IF(
    AND( Agency3_EvaluationPointSum__c &gt;= 91,Agency3_EvaluationPointSum__c &lt;= 100),
    1.4,
    IF(
        AND(Agency3_EvaluationPointSum__c &gt;= 81,Agency3_EvaluationPointSum__c &lt;= 90),
        1.3,
        IF(
            AND(Agency3_EvaluationPointSum__c &gt;= 71,Agency3_EvaluationPointSum__c &lt;= 80),
            1.2,
            IF(
                AND(Agency3_EvaluationPointSum__c &gt;= 61,Agency3_EvaluationPointSum__c &lt;= 70),
                1.1,
                IF(
                    AND(Agency3_EvaluationPointSum__c &gt;= 51,Agency3_EvaluationPointSum__c &lt;= 60),
                    1.0,
                    IF(
                        AND(Agency3_EvaluationPointSum__c &gt;= 41,Agency3_EvaluationPointSum__c &lt;= 50),
                        0.9,
                        VALUE(TEXT(Agency3_Factor_FunctionEvaluationUnder40__c) )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店3_係数_機能評価</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>