force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency3_Factor_FunctionEvaluationUnder40__c.field-meta.xml
<CustomField>
    <fullName>Agency3_Factor_FunctionEvaluationUnder40__c</fullName>
    <inlineHelpText>機能評価の合計（基本＋基盤）が40点以下の場合選択必須</inlineHelpText>
    <label>代理店3_機能評価（係数）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>40点超の場合選択不要</fullName>
                <default>true</default>
                <label>40点超の場合選択不要</label>
            </value>
            <value>
                <fullName>0.8</fullName>
            </value>
            <value>
                <fullName>0.7</fullName>
            </value>
            <value>
                <fullName>0.6</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.4</fullName>
            </value>
            <value>
                <fullName>0.3</fullName>
            </value>
            <value>
                <fullName>0.2</fullName>
            </value>
            <value>
                <fullName>0.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>