force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency3MinCalculationFee__c.field-meta.xml
<CustomField>
    <fullName>Agency3MinCalculationFee__c</fullName>
    <formula>CEILING( TheoryFeeMin__c  *  Agency3_Factor_TradingStyle__c  *  Agency3_Factor_FunctionEvaluation__c  *  CategoryCoefficient__c *  Agency3_Factor_Qualification__c  *  Factor_PriceExponential_CalculateMin__c  *  Agency3_OrderContributionRate__c  / 100)  * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店3_算出手数料(MIN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>