force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency3MinFee__c.field-meta.xml
<CustomField>
    <fullName>Agency3MinFee__c</fullName>
    <label>代理店3_決定手数料(MIN)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>