force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Agency3Name__c.field-meta.xml
<CustomField>
    <fullName>Agency3Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>代理店3_店名(手数料伺い)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Agency3NameShip</relationshipName>
    <type>Lookup</type>
</CustomField>