force-app/main/default/objects/QuoteBiddingInquiry__c/fields/Annotation__c.field-meta.xml
<CustomField>
    <fullName>Annotation__c</fullName>
    <formula>&quot;標準パターンのフローが常に表示されます。自動設定の場合は、WF開始に伴いフローが決定し、矢羽根が進行します。&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>注釈</label>
    <type>Text</type>
</CustomField>