force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AntitrustComplianceCheckResultComment__c.field-meta.xml
<CustomField>
    <fullName>AntitrustComplianceCheckResultComment__c</fullName>
    <label>独禁法遵守チェック結果コメント</label>
    <type>TextArea</type>
</CustomField>