force-app/main/default/objects/QuoteBiddingInquiry__c/fields/AntitrustComplianceQ10__c.field-meta.xml
<CustomField>
    <fullName>AntitrustComplianceQ10__c</fullName>
    <label>(JV入札の場合)JV先の選定理由が明確でありJV伺い認許済である</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>はい</fullName>
            </value>
            <value>
                <fullName>いいえ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>